https://github.community/t/failed-sending-data-to-the-peer-connection-died-tried-5-times-before-giving-up/189130

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macOS-latest]
-        rust: [nightly, stable]
+        rust: [nightly-2021-07-05, stable]
         runtime: [smol, tokio, async-std]
     steps:
     - uses: actions/checkout@master
