--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -21,6 +21,8 @@ trillium-proxy = { path = "../proxy" }
 trillium-rustls = { path = "../rustls" }
 log = "0.4.14"
 trillium-head = { path = "../head" }
+trillium-method-override = { path = "../method-override" }
+trillium-conn-id = { path = "../conn-id" }
 
 [dev-dependencies]
 trillium-testing = { path = "../testing" }
