--- a/async-std/Cargo.toml
+++ b/async-std/Cargo.toml
@@ -15,7 +15,7 @@ async-std = { version = "1.9.0", package = "async-std" }
 log = "0.4.14"
 trillium = { path = "../trillium", version = "^0.1.0" }
 trillium-http = { path = "../http", version = "^0.1.0" }
-trillium-server-common = { path = "../server-common", version = "0.1.0" }
+trillium-server-common = { path = "../server-common", version = "^0.2.0" }
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.9"
