--- a/smol/Cargo.toml
+++ b/smol/Cargo.toml
@@ -18,7 +18,7 @@ futures-lite = "1.12.0"
 log = "0.4.14"
 trillium = { path = "../trillium", version = "^0.1.0" }
 trillium-http = { path = "../http", version = "^0.1.0" }
-trillium-server-common = { path = "../server-common", version = "^0.1.0" }
+trillium-server-common = { path = "../server-common", version = "^0.2.0" }
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.9"
@@ -27,6 +27,7 @@ signal-hook-async-std = "0.2.1"
 [dev-dependencies]
 env_logger = "0.9.0"
 trillium-client = { path = "../client" }
+trillium-logger = { path = "../logger" }
 trillium-testing = { path = "../testing" }
 
 [[example]]
