--- a/aws-lambda/Cargo.toml
+++ b/aws-lambda/Cargo.toml
@@ -17,13 +17,16 @@ lamedh_runtime = "0.3.0"
 log = "0.4.14"
 serde = "1.0.126"
 serde_derive = "1.0.126"
-serde_json = "1.0.64"
-tokio = { version = "1.8.2", features = ["rt", "net", "rt-multi-thread"], package = "tokio" }
+serde_json = "1.0.66"
 trillium = { path = "../trillium", version = "^0.1.0" }
 trillium-http = { path = "../http", version = "^0.1.0" }
 
+[dependencies.tokio]
+version = "1.9.0"
+features = ["rt", "net", "rt-multi-thread"]
+package = "tokio"
+
 [dependencies.http-types]
 version = "0.0.4"
-default-features = false
 features = ["serde"]
 package = "trillium-http-types"
