--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -16,11 +16,11 @@ unstable = []
 [dependencies]
 encoding_rs = "0.8.28"
 futures-lite = "1.12.0"
-http-types = { version = "0.0.4", default-features = false, package = "trillium-http-types" }
+http-types = { version = "0.0.4", package = "trillium-http-types" }
 httparse = "1.4.1"
 log = "0.4.14"
 memmem = "0.1.1"
-pin-project = "1.0.7"
+pin-project = "1.0.8"
 stopper = "0.2.0"
 thiserror = "1.0.26"
 
@@ -35,6 +35,6 @@ trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
 
 [dev-dependencies.tokio]
-version = "1.8.2"
+version = "1.9.0"
 features = ["rt", "net", "rt-multi-thread", "macros"]
 package = "tokio"
