--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,5 +33,6 @@ members = [
 ]
 exclude = ["controllers", "basic-auth"]
 
-[patch.crates-io]
-trillium-http-types = { git = "https://github.com/jbr/http-types", branch = "trillium" }
+[patch.crates-io.trillium-http-types]
+git = "https://github.com/trillim-rs/trillium-http-types"
+branch = "trillium"
