--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -16,11 +16,16 @@ unstable = []
 [dependencies]
 encoding_rs = "0.8.28"
 futures-lite = "1.12.0"
-http-types = { version = "0.0.3", default-features = false, package = "trillium-http-types" }
+hashbrown = "0.11.2"
 httparse = "1.4.1"
+httpdate = "1.0.1"
 log = "0.4.14"
 memmem = "0.1.1"
+mime = "0.3.16"
 pin-project = "1.0.7"
+smallvec = "1.6.1"
+smartcow = "0.1.0"
+smartstring = "0.2.9"
 stopper = "0.2.0"
 thiserror = "1.0.26"
 
