--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -24,6 +24,7 @@ trillium = { path = "../trillium", version = "^0.1.0" }
 trillium-http = { path = "../http", version = "^0.1.0" }
 trillium-server-common = { path = "../server-common", version = "^0.2.0" }
 cfg-if = "1.0.0"
+url = "2.2.2"
 
 [dependencies.trillium-smol]
 path = "../smol"
