--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -24,7 +24,7 @@ memmem = "0.1.1"
 mime = "0.3.16"
 pin-project = "1.0.7"
 smallvec = "1.6.1"
-smartcow = { path = "../../smartcow" }
+smartcow = "0.1.0"
 smartstring = "0.2.9"
 stopper = "0.2.0"
 thiserror = "1.0.26"
