--- a/askama/Cargo.toml
+++ b/askama/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "trillium-askama"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
 description = "askama templates for trillium.rs"
@@ -13,8 +13,11 @@ categories = ["web-programming::http-server", "web-programming"]
 [dependencies]
 askama = "0.10.5"
 mime-db = "1.4.0"
-trillium = { path = "../trillium", version = "^0.1.0" }
+trillium = { path = "../trillium", version = "^0.2.0"}
 
 [dev-dependencies]
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
+
+[package.metadata.cargo-udeps.ignore]
+development = ["trillium-testing"]
