--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "trillium-client"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
 description = "http/1.x client for trillium.rs"
@@ -11,14 +11,12 @@ keywords = ["trillium", "framework", "async"]
 categories = ["web-programming", "web-programming::http-client"]
 
 [dependencies]
-async-net = "1.6.1"
 encoding_rs = "0.8.28"
 futures-lite = "1.12.0"
 httparse = "1.4.1"
 log = "0.4.14"
 memmem = "0.1.1"
 size = "0.1.2"
-trillium = { path = "../trillium", version = "^0.1.0" }
 trillium-tls-common = { path = "../tls-common", version = "^0.1.0" }
 url = "2.2.2"
 mime = "0.3.16"
@@ -26,13 +24,17 @@ mime = "0.3.16"
 [dependencies.trillium-http]
 path = "../http"
 features = ["unstable"]
-version = "^0.1.0"
+version = "^0.2.0"
 
 [dev-dependencies]
 async-global-executor = "2.0.2"
 async-io = "1.6.0"
 env_logger = "0.9.0"
 fastrand = "1.5.0"
+trillium = { path = "../trillium" }
 trillium-rustls = { path = "../rustls" }
 trillium-smol = { path = "../smol/" }
 trillium-testing = { path = "../testing" }
+
+[package.metadata.cargo-udeps.ignore]
+development = ["trillium-testing", "trillium"]
