--- a/logger/Cargo.toml
+++ b/logger/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "trillium-logger"
-version = "0.1.3"
+version = "0.2.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
 description = "logger for trillium.rs"
@@ -16,8 +16,10 @@ chrono = "0.4.19"
 colored = "2.0.0"
 log = "0.4.14"
 size = "0.1.2"
-trillium = { path = "../trillium", version = "^0.1.0" }
+trillium = { path = "../trillium", version = "^0.2.0"}
 
 [dev-dependencies]
-env_logger = "0.9.0"
 trillium-smol = { path = "../smol" }
+
+[package.metadata.cargo-udeps.ignore]
+development = ["trillium-testing"]
