--- a/server-common/Cargo.toml
+++ b/server-common/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "trillium-server-common"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
 description = "server utilities for trillium.rs"
@@ -11,13 +11,12 @@ keywords = ["trillium", "framework", "async"]
 categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
-async-channel = "1.6.1"
 atomic-waker = "1.0.0"
 futures-lite = "1.12.0"
 log = "0.4.14"
 pin-project-lite = "0.2.7"
-trillium = { path = "../trillium", version = "^0.1.0" }
-trillium-http = { path = "../http", version = "^0.1.0" }
+trillium = { path = "../trillium", version = "^0.2.0"}
+trillium-http = { path = "../http", version = "^0.2.0" }
 trillium-tls-common = { path = "../tls-common/", version = "^0.1.0" }
 
 [target.'cfg(unix)'.dependencies]
@@ -26,3 +25,6 @@ rlimit = "0.6.2"
 [dev-dependencies]
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
+
+[package.metadata.cargo-udeps.ignore]
+development = ["trillium-testing", "trillium-smol"]
