--- a/smol/Cargo.toml
+++ b/smol/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "trillium-smol"
-version = "0.1.4"
+version = "0.2.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
 description = "smol runtime adapter for trillium.rs"
@@ -16,9 +16,9 @@ async-io = "1.6.0"
 async-net = "1.6.1"
 futures-lite = "1.12.0"
 log = "0.4.14"
-trillium = { path = "../trillium", version = "^0.1.0" }
-trillium-http = { path = "../http", version = "^0.1.0" }
-trillium-server-common = { path = "../server-common", version = "^0.2.0" }
+trillium = { path = "../trillium", version = "^0.2.0"}
+trillium-http = { path = "../http", version = "^0.2.0" }
+trillium-server-common = { path = "../server-common", version = "^0.3.0"}
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.9"
@@ -33,3 +33,6 @@ trillium-testing = { path = "../testing" }
 [[example]]
 name = "smol"
 test = true
+
+[package.metadata.cargo-udeps.ignore]
+development = ["trillium-testing", "trillium-client"]
