--- a/static-compiled/Cargo.toml
+++ b/static-compiled/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "trillium-static-compiled"
-version = "0.1.0"
+version = "0.3.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
 description = "compile-time static assets for trillium.rs"
@@ -14,9 +14,11 @@ categories = ["web-programming::http-server", "web-programming"]
 include_dir = "0.6.1"
 log = "0.4.14"
 mime-db = "1.4.0"
-trillium = { path = "../trillium", version = "^0.1.0" }
+trillium = { path = "../trillium", version = "^0.2.0"}
 
 [dev-dependencies]
-env_logger = "0.9.0"
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
+
+[package.metadata.cargo-udeps.ignore]
+development = ["trillium-testing"]
