--- a/static/Cargo.toml
+++ b/static/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "trillium-static"
-version = "0.1.0"
+version = "0.3.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
 description = "filesystem-backed static assets for trillium.rs"
@@ -24,7 +24,7 @@ futures-lite = "1.12.0"
 log = "0.4.14"
 mime-db = "1.4.0"
 relative-path = "1.4.0"
-trillium = { path = "../trillium", version = "^0.1.0" }
+trillium = { path = "../trillium", version = "^0.2.0"}
 
 [dependencies.async_std_crate]
 optional = true
@@ -42,3 +42,6 @@ env_logger = "0.9.0"
 trillium-static = { path = ".", features = ["smol"] }
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
+
+[package.metadata.cargo-udeps.ignore]
+development = ["trillium-testing"]
