--- a/tera/Cargo.toml
+++ b/tera/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "trillium-tera"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2018"
 description = "tera template handler for trillium.rs"
@@ -15,9 +15,11 @@ log = "0.4.14"
 mime-db = "1.4.0"
 serde = "1.0.126"
 tera = "1.12.1"
-trillium = { path = "../trillium", version = "^0.1.0" }
+trillium = { path = "../trillium", version = "^0.2.0"}
 
 [dev-dependencies]
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
-env_logger = "0.9.0"
+
+[package.metadata.cargo-udeps.ignore]
+development = ["trillium-testing"]
