--- a/static-compiled/Cargo.toml
+++ b/static-compiled/Cargo.toml
@@ -17,6 +17,7 @@ mime-db = "1.4.0"
 trillium = { path = "../trillium", version = "^0.2.0"}
 
 [dev-dependencies]
+trillium-logger = { path = "../logger" }
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
 
