--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -25,6 +25,7 @@ trillium-http = { path = "../http", version = "^0.2.0"}
 trillium-server-common = { path = "../server-common", version = "^0.3.0"}
 cfg-if = "1.0.0"
 url = "2.2.2"
+async-channel = "1.6.1"
 
 [dependencies.trillium-smol]
 path = "../smol"
