--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
   "aws-lambda",
   "aws-lambda-example",
   "basic-auth",
+  "caching-headers",
   "client",
   "conn-id",
   "cookies",
