--- a/static/Cargo.toml
+++ b/static/Cargo.toml
@@ -23,9 +23,10 @@ cfg-if = "1.0.0"
 futures-lite = "1.12.0"
 log = "0.4.14"
 relative-path = "1.5.0"
-trillium = { path = "../trillium", version = "^0.2.0"}
+trillium = { path = "../trillium", version = "^0.2.0" }
 mime_guess = "2.0.3"
-mime = "0.3.16"
+httpdate = "1.0.1"
+etag = { version = "3.0.0", features = ["std"] }
 
 [dependencies.async_std_crate]
 optional = true
@@ -40,9 +41,9 @@ version = "1.11.0"
 
 [dev-dependencies]
 env_logger = "0.9.0"
-trillium-static = { path = ".", features = ["smol"] }
-trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
+trillium-logger = { path = "../logger" }
+trillium-smol = { path = "../smol" }
 
 [package.metadata.cargo-udeps.ignore]
 development = ["trillium-testing"]
