--- a/websockets/Cargo.toml
+++ b/websockets/Cargo.toml
@@ -10,16 +10,20 @@ readme = "../README.md"
 keywords = ["trillium", "framework", "async"]
 categories = ["web-programming::http-server", "web-programming"]
 
+[package.metadata.docs.rs]
+features = ["json"]
+
 [features]
+default = []
 json = ["serde_json", "serde"]
 
 [dependencies]
-async-dup = "1.2.2"
 async-tungstenite = "0.16.0"
 base64 = "0.13.0"
+fastrand = "1.5.0"
+futures-lite = "1.12.0"
 futures-util = "0.3.17"
 log = "0.4.14"
-pin-project = "1.0.8"
 serde = { version = "1.0.130", optional = true }
 serde_json = { version = "1.0.68", optional = true }
 sha-1 = "0.9.8"
@@ -28,10 +32,13 @@ trillium = { path = "../trillium", version = "^0.2.0" }
 trillium-http = { path = "../http", version = "^0.2.0" }
 
 [dev-dependencies]
+serde = { version = "1.0.130", features = ["derive"] }
+async-channel = "1.6.1"
 async-net = "1.6.1"
-env_logger = "0.9.0"
+broadcaster = "1.0.0"
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
+trillium-websockets = { features = ["json"], path = "." }
 
 [package.metadata.cargo-udeps.ignore]
 development = ["trillium-testing"]
