--- a/server-common/Cargo.toml
+++ b/server-common/Cargo.toml
@@ -14,7 +14,6 @@ categories = ["web-programming::http-server", "web-programming"]
 atomic-waker = "1.0.0"
 futures-lite = "1.12.0"
 log = "0.4.14"
-pin-project-lite = "0.2.7"
 trillium = { path = "../trillium", version = "^0.2.0"}
 trillium-http = { path = "../http", version = "^0.2.0" }
 trillium-tls-common = { path = "../tls-common/", version = "^0.1.0" }
@@ -25,6 +24,8 @@ rlimit = "0.6.2"
 [dev-dependencies]
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
+
+[features]
 
 [package.metadata.cargo-udeps.ignore]
 development = ["trillium-testing", "trillium-smol"]
