--- a/async-std/Cargo.toml
+++ b/async-std/Cargo.toml
@@ -11,11 +11,15 @@ keywords = ["trillium", "framework", "async"]
 categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
-async-std = { version = "1.10.0", package = "async-std" }
 log = "0.4.14"
 trillium = { path = "../trillium", version = "^0.2.0" }
 trillium-http = { path = "../http", version = "^0.2.0" }
 trillium-server-common = { path = "../server-common", version = "^0.3.0" }
+
+[dependencies.async-std]
+version = "1.10.0"
+package = "async-std"
+features = ["unstable"]
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.13"
@@ -26,5 +30,5 @@ env_logger = "0.9.0"
 
 [dev-dependencies.async-std]
 version = "1.10.0"
-features = ["attributes"]
+features = ["attributes", "unstable"]
 package = "async-std"
