--- a/router/Cargo.toml
+++ b/router/Cargo.toml
@@ -11,10 +11,9 @@ keywords = ["trillium", "framework", "async", "router"]
 categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
-futures-lite = "1.12.0"
 log = "0.4.14"
-routefinder = { version = "0.4.0", path = "../../routefinder" }
-trillium = { path = "../trillium", version = "^0.2.0" }
+routefinder = "0.4.0"
+trillium = { path = "../trillium", version = "^0.2.0"}
 
 [dev-dependencies]
 env_logger = "0.9.0"
