--- a/router/Cargo.toml
+++ b/router/Cargo.toml
@@ -12,11 +12,13 @@ categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
 log = "0.4.14"
-routefinder = "0.4.0"
-trillium = { path = "../trillium", version = "^0.2.0"}
+routefinder = "0.5"
+trillium = { path = "../trillium", version = "^0.2.0" }
 
 [dev-dependencies]
 env_logger = "0.9.0"
 trillium-logger = { path = "../logger" }
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
+
+[features]
