--- a/channels/Cargo.toml
+++ b/channels/Cargo.toml
@@ -14,16 +14,13 @@ categories = ["web-programming::http-server", "web-programming"]
 async-broadcast = "0.3.4"
 async-channel = "1.6.1"
 futures-lite = "1.12.0"
-futures-util = "0.3.17"
+futures-util = "0.3.19"
 log = "0.4.14"
-serde = { version = "1.0.130", features = ["derive"] }
-serde_json = "1.0.68"
+querystrong = "0.1.1"
+serde = { version = "1.0.132", features = ["derive"] }
+serde_json = "1.0.73"
 trillium = { path = "../trillium", version = "^0.2.0" }
-
-[dependencies.trillium-websockets]
-path = "../websockets"
-version = "^0.4.0"
-features = ["json"]
+trillium-websockets = { path = "../websockets", version = "^0.4.0" }
 
 [dev-dependencies]
 trillium-api = { path = "../api" }
