--- a/tera/Cargo.toml
+++ b/tera/Cargo.toml
@@ -13,8 +13,8 @@ categories = ["web-programming::http-server", "web-programming"]
 [dependencies]
 log = "0.4.14"
 mime-db = "1.6.0"
-serde = "1.0.130"
-tera = "1.15.*"
+serde = "1.0.132"
+tera = "1.15.0"
 trillium = { path = "../trillium", version = "^0.2.0" }
 
 [dev-dependencies]
