[static-compiled minor feature] upgrade fork of include_dir

--- a/static-compiled/Cargo.toml
+++ b/static-compiled/Cargo.toml
@@ -11,18 +11,20 @@ keywords = ["trillium", "framework", "async"]
 categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
-trillium-include-dir = "0.1.0"
 log = "0.4.14"
 mime = "0.3.16"
 mime_guess = "2.0.3"
 trillium = { path = "../trillium", version = "^0.2.0" }
 httpdate = "1.0.1"
+trillium-static-compiled-macros = { path = "../static-compiled-macros" }
 
 [dev-dependencies]
 trillium-caching-headers = { path = "../caching-headers" }
 trillium-logger = { path = "../logger" }
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
+
+[features]
 
 [package.metadata.cargo-udeps.ignore]
 development = ["trillium-testing"]
