--- a/static-compiled-macros/Cargo.toml
+++ b/static-compiled-macros/Cargo.toml
@@ -3,7 +3,7 @@ name = "trillium-static-compiled-macros"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2021"
-description = "proc-macros for static assets for trillium.rs"
+description = "internal-use-only proc-macros for trillium-static-compiled"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/trillium-rs/trillium"
 readme = "../README.md"
