--- a/static-compiled/Cargo.toml
+++ b/static-compiled/Cargo.toml
@@ -16,7 +16,7 @@ mime = "0.3.16"
 mime_guess = "2.0.3"
 trillium = { path = "../trillium", version = "^0.2.0" }
 httpdate = "1.0.1"
-trillium-static-compiled-macros = { path = "../static-compiled-macros" }
+trillium-static-compiled-macros = { path = "../static-compiled-macros", version = "0.1.0" }
 
 [dev-dependencies]
 trillium-caching-headers = { path = "../caching-headers" }
