trillium, trillium-http clippies
add quite a few more clippies for trillium and trillium-http

--- a/aws-lambda-example/Cargo.toml
+++ b/aws-lambda-example/Cargo.toml
@@ -3,6 +3,13 @@ name = "trillium-aws-lambda-example"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2021"
+publish = false
+description = "example application using aws lambda"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "../README.md"
+keywords = ["trillium", "framework", "async"]
+categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
 trillium-aws-lambda = { path = "../aws-lambda" }
