--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -3,6 +3,12 @@ name = "trillium-example"
 version = "0.1.0"
 authors = ["Jacob Rothstein <hi@jbr.me>"]
 edition = "2021"
+publish = false
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/trillium-rs/trillium"
+readme = "../README.md"
+keywords = ["trillium", "framework", "async"]
+categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
 env_logger = "0.9.0"
