--- a/channels/Cargo.toml
+++ b/channels/Cargo.toml
@@ -13,6 +13,7 @@ categories = ["web-programming::http-server", "web-programming"]
 [dependencies]
 async-broadcast = "0.4.0"
 async-channel = "1.6.1"
+dashmap = "5.2.0"
 futures-lite = "1.12.0"
 futures-util = "0.3.19"
 log = "0.4.14"
