fix failing docs build for testing & static
- Enable smol as runtime for docs.rs builds
- Fix minor documentation error in testing
- Enable smol feature for static in caching headers

--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -10,6 +10,9 @@ readme = "../README.md"
 keywords = ["trillium", "framework", "testing"]
 categories = ["web-programming::http-server", "web-programming"]
 
+[package.metadata.docs.rs]
+features = ["smol"]
+
 [features]
 tokio = ["trillium-tokio"]
 smol = ["trillium-smol"]
