--- a/caching-headers/Cargo.toml
+++ b/caching-headers/Cargo.toml
@@ -17,6 +17,6 @@ trillium = { path = "../trillium", version = "^0.2.0" }
 
 [dev-dependencies]
 trillium-smol = { path = "../smol" }
-trillium-static = { path = "../static" }
+trillium-static = { path = "../static", features = ["smol"] }
 
 [features]
