--- a/logger/Cargo.toml
+++ b/logger/Cargo.toml
@@ -14,8 +14,12 @@ categories = ["web-programming::http-server", "web-programming"]
 atty = "0.2.14"
 chrono = "0.4.19"
 colored = "2.0.0"
-log = "0.4.14"
-size = "0.2.0"
+#log = "0.4.14"
+size = "0.1.2"
+smol = "1.2.5"
+tracing = "0.1.35"
+tracing-log = "0.1.3"
+tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
 trillium = { path = "../trillium", version = "^0.2.0" }
 
 [dev-dependencies]
