--- a/rustls/Cargo.toml
+++ b/rustls/Cargo.toml
@@ -11,12 +11,13 @@ keywords = ["trillium", "framework", "async"]
 categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
-async-rustls = "0.2.0"
+async-rustls = "0.3.0"
 log = "0.4.17"
-rustls = "0.19.1"
+rustls = "0.20.7"
 rustls-native-certs = "0.6.2"
+rustls-pemfile = "1.0.1"
 trillium-tls-common = { path = "../tls-common", version = "^0.1.0" }
-webpki-roots = "0.21"
+webpki-roots = "0.22"
 
 [dev-dependencies]
 env_logger = "0.10.0"
