disable cargo-udeps for now

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,11 +54,11 @@ jobs:
     - name: Format
       run: cargo fmt --all -- --check
 
-    - name: Run cargo-udeps
-      uses: aig787/cargo-udeps-action@v1
-      with:
-        version: 'latest'
-        args: '--all-targets --features smol'
+    # - name: Run cargo-udeps
+    #   uses: aig787/cargo-udeps-action@v1
+    #   with:
+    #     version: 'latest'
+    #     args: '--all-targets --features smol'
 
     - name: Docs
       run: cargo doc --no-deps --features smol
