--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -12,11 +12,13 @@ categories = ["web-programming::http-server", "web-programming"]
 
 [features]
 unstable = []
+http-compat = ["http"]
 
 [dependencies]
 encoding_rs = "0.8.31"
 futures-lite = "1.12.0"
 hashbrown = "0.13.1"
+http = { version = "0.2.8", optional = true }
 httparse = "1.8.0"
 httpdate = "1.0.2"
 log = "0.4.17"
