--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -16,6 +16,7 @@ forms = ["serde_urlencoded", "form_urlencoded"]
 
 [dependencies]
 form_urlencoded = { version = "1.1.0", optional = true }
+log = "0.4.17"
 mime = "0.3.16"
 serde = { version = "1.0.153", features = ["derive"] }
 serde_json = "1.0.94"
