what's a protoc? no idea

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,10 @@ jobs:
         rust: [stable]
         runtime: [smol, tokio, async-std]
     steps:
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v1
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
     - uses: actions/checkout@master
     - name: Install ${{ matrix.rust }}
       uses: actions-rs/toolchain@v1
@@ -40,6 +44,10 @@ jobs:
     name: Lints and Docs
     runs-on: ubuntu-latest
     steps:
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v1
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
     - uses: actions/checkout@master
     - uses: actions-rs/toolchain@v1
       with:
