improve pool implementation
in particular:
* use a bounded lock-free queue for concurrent access
* resolve a bug wherein we could have drained a connection for each of the socket addrs that the ToSocketAddrs resolved to, even if only one was used
* provide a limited cleanup entrypoint. currently it only garbage collects completely empty poolsets, but eventually it should iterate over connections in the poolset and test for expiration and liveness
* add tests for standard pool behavior because it is not tested directly in any doctests

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -26,8 +26,8 @@ mime = "0.3.16"
 serde_json = { version = "1.0.94", optional = true }
 serde = { version = "1.0.156", optional = true }
 thiserror = { version = "1.0.39", optional = true }
-parking_lot = "0.12.1"
 dashmap = "5.4.0"
+crossbeam-queue = "0.3.8"
 
 [dependencies.trillium-http]
 path = "../http"
