--- a/aws-lambda-example/Cargo.toml
+++ b/aws-lambda-example/Cargo.toml
@@ -24,3 +24,4 @@ trillium-sessions = { path = "../sessions" }
 trillium-askama = { path = "../askama" }
 futures-lite = "1.12.0"
 askama = "0.12.0"
+async-session-cookie-store = { git = "https://github.com/http-rs/async-session", branch = "overhaul-session-and-session-store" }
