--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -16,7 +16,7 @@ proc-macro = true
 [dependencies]
 proc-macro2 = "1.0.52"
 quote = "1.0.26"
-syn = {version = "2.0.3", features= ["visit", "parsing"]}
+syn = { version = "2.0.3", features = ["full", "visit"] }
 
 [dev-dependencies]
 trillium = { path = "../trillium" }
