--- a/rustls/Cargo.toml
+++ b/rustls/Cargo.toml
@@ -16,7 +16,7 @@ log = "0.4.17"
 rustls = "0.20.8"
 rustls-native-certs = "0.6.2"
 rustls-pemfile = "1.0.2"
-trillium-tls-common = { path = "../tls-common", version = "^0.1.0" }
+trillium-server-common = { path = "../server-common" }
 webpki-roots = "0.22"
 
 [dev-dependencies]
