--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -47,6 +47,7 @@ version = "^0.2.0"
 optional = true
 
 [dev-dependencies]
+trillium-client = { path = "../client", features = ["json"] }
 trillium-logger = { path = "../logger" }
 trillium-smol = { path = "../smol" }
 
