server-common patch features: add Config::spawn and introduce ServerHandle

--- a/server-common/Cargo.toml
+++ b/server-common/Cargo.toml
@@ -12,12 +12,13 @@ categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
 async-trait = "0.1.68"
-atomic-waker = "1.1.0"
+async_cell = "0.2.2"
 futures-lite = "1.13.0"
 log = "0.4.17"
 trillium = { path = "../trillium", version = "^0.2.0" }
 trillium-http = { path = "../http", version = "^0.3.0" }
 url = "2.3.1"
+waker-set = "0.2.0"
 
 [target.'cfg(unix)'.dependencies]
 rlimit = "0.9.1"
