how to not get codecov to fail every CI?

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,7 +1,6 @@
 coverage:
   status:
-    patch:
-      informational: true
+    patch: false
     changes:
       informational: true
     project:
