--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -30,6 +30,8 @@ cfg-if = "1.0.0"
 url = "2.3.1"
 async-channel = "1.8.0"
 trillium-macros = { version = "0.0.4", path = "../macros" }
+dashmap = "5.4.0"
+once_cell = "1.17.1"
 
 [dependencies.trillium-smol]
 path = "../smol"
@@ -47,6 +49,7 @@ version = "^0.3.0"
 optional = true
 
 [dev-dependencies]
+test-harness = "0.1.1"
 trillium-client = { path = "../client", features = ["json"] }
 trillium-logger = { path = "../logger" }
 trillium-smol = { path = "../smol" }
