--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -11,13 +11,14 @@ keywords = ["trillium", "framework", "async"]
 categories = ["web-programming::http-server", "web-programming"]
 
 [features]
-default = ["forms"]
+default = ["forms", "querystrong"]
 forms = ["serde_urlencoded", "form_urlencoded"]
 
 [dependencies]
 form_urlencoded = { version = "1.2.0", optional = true }
 log = "0.4.19"
 mime = "0.3.17"
+querystrong = { version = "0.3.0", optional = true }
 serde = { version = "1.0.181", features = ["derive"] }
 serde_json = "1.0.104"
 serde_path_to_error = "0.1.14"
