try to make codecov informational, not fail builds

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,9 +1,8 @@
 coverage:
   range: 0..100
   status:
-    patch: false
-    changes:
-      informational: true
+    patch: off
+    changes: false
     project:
       default:
         informational: true
