--- a/rustls/Cargo.toml
+++ b/rustls/Cargo.toml
@@ -11,18 +11,19 @@ keywords = ["trillium", "framework", "async"]
 categories = ["web-programming::http-server", "web-programming"]
 
 [features]
-default = ["native-roots"]
-native-roots = ["dep:rustls-native-certs"]
+default = ["client", "native-roots"]
+client = ["dep:log", "dep:rustls-webpki", "dep:webpki-roots"]
+native-roots = ["client", "dep:rustls-native-certs"]
 
 [dependencies]
 async-rustls = "0.4.0"
-log = "0.4.19"
+log = { version = "0.4.19", optional = true }
 rustls = "0.21.0"
 rustls-native-certs = { version = "0.6.2", optional = true }
 rustls-pemfile = "1.0.2"
-rustls-webpki = "0.100.1"
+rustls-webpki = { version = "0.100.1", optional = true }
 trillium-server-common = { path = "../server-common", version = "^0.4.0" }
-webpki-roots = "0.23"
+webpki-roots = { version = "0.23", optional = true }
 
 [dev-dependencies]
 env_logger = "0.10.0"
