--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ members = [
     "macros",
     "method-override",
     "native-tls",
+    "panic-boundary",
     "proxy",
     "redirect",
     "router",
