http patch: only buffer the top of the response
when we hit the buffer's capacity, do a vectored write until the buffer is consumed and then transparently write to the inner AsyncWrite

--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -43,6 +43,8 @@ trillium-client = { path = "../client" }
 trillium-smol = { path = "../smol" }
 trillium-testing = { path = "../testing" }
 trillium-http = { path = ".", features = ["http-compat"] }
+pretty_assertions = "1.4.0"
+fastrand = "2.0.1"
 
 [dev-dependencies.tokio]
 version = "1.29.1"
