use EventListener instead of WakerSet

--- a/server-common/Cargo.toml
+++ b/server-common/Cargo.toml
@@ -13,12 +13,13 @@ categories = ["web-programming::http-server", "web-programming"]
 [dependencies]
 async-trait = "0.1.72"
 async_cell = "0.2.2"
+event-listener = "3.0.0"
 futures-lite = "2.0.0"
 log = "0.4.19"
+pin-project-lite = "0.2.13"
 trillium = { path = "../trillium", version = "^0.2.0" }
 trillium-http = { path = "../http", version = "^0.3.0" }
 url = "2.4.0"
-waker-set = "0.2.0"
 
 [target.'cfg(unix)'.dependencies]
 rlimit = "0.10.1"
