--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -23,7 +23,7 @@ serde_json = "1.0.104"
 serde_path_to_error = "0.1.14"
 serde_urlencoded = { version = "0.7.1", optional = true }
 thiserror = "1.0.44"
-trillium = { path = "../trillium", version = "^0.2.0" }
+trillium = { path = "../trillium", version = "0.2.0" }
 
 
 [dev-dependencies]
