--- a/askama/Cargo.toml
+++ b/askama/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["web-programming::http-server", "web-programming"]
 [dependencies]
 askama = "0.12.0"
 mime-db = "1.7.0"
-trillium = { path = "../trillium", version = "^0.2.0"}
+trillium = { path = "../trillium", version = "0.2.0"}
 
 [dev-dependencies]
 trillium-smol = { path = "../smol" }
