--- a/aws-lambda/Cargo.toml
+++ b/aws-lambda/Cargo.toml
@@ -19,5 +19,5 @@ serde = "1.0.181"
 serde_derive = "1.0.181"
 serde_json = "1.0.104"
 tokio = { version = "1.29.1", features = ["rt", "net", "rt-multi-thread"], package = "tokio" }
-trillium = { path = "../trillium", version = "^0.2.0"}
-trillium-http = { path = "../http", version = "^0.3.0" }
+trillium = { path = "../trillium", version = "0.2.0"}
+trillium-http = { path = "../http", version = "0.3.0" }
