--- a/caching-headers/Cargo.toml
+++ b/caching-headers/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["web-programming::http-server", "web-programming"]
 [dependencies]
 etag = { version = "4.0.0", features = ["std"] }
 httpdate = "1.0.2"
-trillium = { path = "../trillium", version = "^0.2.0" }
+trillium = { path = "../trillium", version = "0.2.0" }
 
 [dev-dependencies]
 trillium-smol = { path = "../smol" }
