--- a/channels/Cargo.toml
+++ b/channels/Cargo.toml
@@ -20,8 +20,8 @@ log = "0.4.19"
 querystrong = "0.3.0"
 serde = { version = "1.0.181", features = ["derive"] }
 serde_json = "1.0.104"
-trillium = { path = "../trillium", version = "^0.2.0" }
-trillium-websockets = { path = "../websockets", version = "^0.5.0" }
+trillium = { path = "../trillium", version = "0.2.0" }
+trillium-websockets = { path = "../websockets", version = "0.5.0" }
 
 [dev-dependencies]
 trillium-api = { path = "../api" }
