--- a/conn-id/Cargo.toml
+++ b/conn-id/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
 fastrand = "2.0.0"
-trillium = { path = "../trillium", version = "^0.2.0" }
+trillium = { path = "../trillium", version = "0.2.0" }
 
 [dev-dependencies]
 trillium-testing = { path = "../testing" }
