--- a/cookies/Cargo.toml
+++ b/cookies/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["web-programming::http-server", "web-programming"]
 
 [dependencies]
 log = "0.4.19"
-trillium = { path = "../trillium", version = "^0.2.0"}
+trillium = { path = "../trillium", version = "0.2.0"}
 
 [dependencies.cookie]
 version = "0.18.0"
