--- a/forwarding/Cargo.toml
+++ b/forwarding/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["web-programming::http-server", "web-programming"]
 [dependencies]
 cidr = "0.2.2"
 log = "0.4.19"
-trillium = { path = "../trillium", version = "^0.2.0"}
+trillium = { path = "../trillium", version = "0.2.0"}
 
 [dev-dependencies]
 trillium-logger = { path = "../logger" }
