--- a/handlebars/Cargo.toml
+++ b/handlebars/Cargo.toml
@@ -16,7 +16,7 @@ handlebars = { version = "4.3.7", features = ["dir_source"] }
 log = "0.4.19"
 serde = { version = "1.0.181", features = ["derive"] }
 serde_json = "1.0.104"
-trillium = { path = "../trillium", version = "^0.2.0"}
+trillium = { path = "../trillium", version = "0.2.0"}
 
 [dev-dependencies]
 env_logger = "0.10.0"
