--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -14,10 +14,10 @@ categories = ["web-programming::http-server", "web-programming"]
 full-duplex-async-copy = "0.1.0"
 log = "0.4.19"
 size = "0.4.1"
-trillium = { path = "../trillium", version = "^0.2.0"}
-trillium-client = { path = "../client", version = "^0.4.0" }
+trillium = { path = "../trillium", version = "0.2.0"}
+trillium-client = { path = "../client", version = "0.4.0" }
 trillium-forwarding = { version = "0.2.1", path = "../forwarding" }
-trillium-http = { path = "../http", version = "^0.3.0" }
+trillium-http = { path = "../http", version = "0.3.0" }
 url = "2.4.0"
 
 [dev-dependencies]
