--- a/router/Cargo.toml
+++ b/router/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["web-programming::http-server", "web-programming"]
 [dependencies]
 log = "0.4.19"
 routefinder = "0.5.3"
-trillium = { path = "../trillium", version = "^0.2.0" }
+trillium = { path = "../trillium", version = "0.2.0" }
 
 [dev-dependencies]
 env_logger = "0.10.0"
