--- a/static-compiled/Cargo.toml
+++ b/static-compiled/Cargo.toml
@@ -14,7 +14,7 @@ categories = ["web-programming::http-server", "web-programming"]
 log = "0.4.19"
 mime = "0.3.17"
 mime_guess = "2.0.4"
-trillium = { path = "../trillium", version = "^0.2.0" }
+trillium = { path = "../trillium", version = "0.2.0" }
 httpdate = "1.0.2"
 trillium-static-compiled-macros = { path = "../static-compiled-macros", version = "0.1.0" }
 
