--- a/static/Cargo.toml
+++ b/static/Cargo.toml
@@ -26,7 +26,7 @@ cfg-if = "1.0.0"
 futures-lite = "2.0.0"
 log = "0.4.19"
 relative-path = "1.8.0"
-trillium = { path = "../trillium", version = "^0.2.0" }
+trillium = { path = "../trillium", version = "0.2.0" }
 mime_guess = "2.0.4"
 httpdate = "1.0.2"
 etag = { version = "4.0.0", features = ["std"] }
