--- a/tera/Cargo.toml
+++ b/tera/Cargo.toml
@@ -15,7 +15,7 @@ log = "0.4.19"
 mime-db = "1.7.0"
 serde = "1.0.181"
 tera = "1.19.0"
-trillium = { path = "../trillium", version = "^0.2.0" }
+trillium = { path = "../trillium", version = "0.2.0" }
 
 [dev-dependencies]
 trillium-smol = { path = "../smol" }
