--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -23,9 +23,9 @@ default = []
 async-dup = "1.2.2"
 futures-lite = "2.0.0"
 portpicker = "0.1.1"
-trillium = { path = "../trillium", version = "^0.2.0" }
-trillium-http = { path = "../http", version = "^0.3.0" }
-trillium-server-common = { path = "../server-common", version = "^0.4.0" }
+trillium = { path = "../trillium", version = "0.2.0" }
+trillium-http = { path = "../http", version = "0.3.0" }
+trillium-server-common = { path = "../server-common", version = "0.4.0" }
 cfg-if = "1.0.0"
 url = "2.4.0"
 async-channel = "1.9.0"
@@ -35,17 +35,17 @@ once_cell = "1.18.0"
 
 [dependencies.trillium-smol]
 path = "../smol"
-version = "^0.3.0"
+version = "0.3.0"
 optional = true
 
 [dependencies.trillium-tokio]
 path = "../tokio"
-version = "^0.3.0"
+version = "0.3.0"
 optional = true
 
 [dependencies.trillium-async-std]
 path = "../async-std"
-version = "^0.3.0"
+version = "0.3.0"
 optional = true
 
 [dev-dependencies]
