--- a/websockets/Cargo.toml
+++ b/websockets/Cargo.toml
@@ -28,8 +28,8 @@ serde = { version = "1.0.181", optional = true }
 serde_json = { version = "1.0.104", optional = true }
 sha-1 = "0.10.1"
 stopper = "0.2.1"
-trillium = { path = "../trillium", version = "^0.2.0" }
-trillium-http = { path = "../http", version = "^0.3.0" }
+trillium = { path = "../trillium", version = "0.2.0" }
+trillium-http = { path = "../http", version = "0.3.0" }
 
 [dev-dependencies]
 serde = { version = "1.0.181", features = ["derive"] }
